Обновили index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,154 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shop</title>
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,300;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+   <header class="header">
+        <div class="wrap wrap_header">
+            <div class="buttons_box-1">
+                <a href="index.html" class="logo-link"><img src="img/logo.svg" alt="logo"></a>
+                <button class="search-button"><img src="img/search.svg" alt="search"></button>
+            </div>
+            <div class="buttons_box-2">
+               <button class="menu-button"><img src="img/menu.svg" alt="menu"></button>
+               <a href="registration.html" class="registry-link"><img src="img/registry.svg" alt="registry"></a>
+               <a href="cart.html" class="basket-link"><img src="img/basket.svg" alt="basket"></a>
+            </div>
+        </div>
+   </header>
+<main class="main">
+   <section class="section">
+      <div class="wrap wrap_info">
+       <h1 class="heading">THE BRAND<br><span class="heading_small">
+          OF LUXERIOUS<span class="heading_pink">FASHION</span></span></h1>
+      </div>
+  </section> 
+  <section class="offers_categories">
+      <div class="wrap wrap_categories">
+         <div class="categories_products products-for-women">
+            <p class="categories_products-item-1">30% OFF</p>
+            <p class="categories_products-item-2">FOR WOMEN</p>
+         </div>
+         <div class="categories_products products-for-men">
+            <p class="categories_products-item-3">HOT DEAL</p>
+            <p class="categories_products-item-4">FOR MEN</p>
+         </div>
+         <div class="categories_products products-for-kids">
+            <p class="categories_products-item-5">NEW ARRIVALS</p>
+            <p class="categories_products-item-6">FOR KIDS</p>
+         </div>
+         <div class="categories_accesories products-accesories">
+            <p class="categories_accesories-item-7">LUXIROUS & TRENDY</p>
+            <p class="categories_accesories-item-8">ACCESORIES</p>
+         </div>
+      </div>
+   </section>
+   <section class="wrap product_catalog">
+          <h3 class="heading_catalog">Fetured Items</h3>
+          <p class="item_catalog"> Shop for items based on what we featured in this week</p>
+         <section class="catalog_box">
+          <div class="catalog">
+             <img class="product__img" src="img/product-1.png" alt="card-1">
+                    <h4 class="heading__mini">ELLERY X M'O CAPSULE </h4>
+                    <p class="text">Known for her sculptural takes on traditional tailoring, 
+                       Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="cost">$52.00</p>
+          </div>
+          <div class="catalog">
+             <img class="product__img" src="img/product-2.png" alt="card-2">
+                    <h4 class="heading__mini">ELLERY X M'O CAPSULE </h4>
+                    <p class="text">Known for her sculptural takes on traditional tailoring, 
+                       Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                       <p class="cost">$52.00</p>
+          </div>
+          <div class="catalog">
+             <img class="product__img" src="img/product-3.png" alt="card-3">
+                    <h4 class="heading__mini">ELLERY X M'O CAPSULE </h4>
+                    <p class="text">Known for her sculptural takes on traditional tailoring, 
+                       Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                       <p class="cost">$52.00</p>
+          </div>
+          <div class="catalog">
+             <img class="product__img" src="img/product-4.png" alt="card-4">
+                    <h4 class="heading__mini">ELLERY X M'O CAPSULE </h4>
+                    <p class="text">Known for her sculptural takes on traditional tailoring, 
+                       Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                       <p class="cost">$52.00</p>
+          </div>
+          <div class="catalog">
+             <img class="product__img" src="img/product-5.png" alt="card-5">
+                    <h4 class="heading__mini">ELLERY X M'O CAPSULE </h4>
+                    <p class="text">Known for her sculptural takes on traditional tailoring, 
+                       Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                       <p class="cost">$52.00</p>
+          </div>
+          <div class="catalog">
+             <img class="product__img" src="img/product-6.png" alt="card-6">
+                    <h4 class="heading__mini">ELLERY X M'O CAPSULE </h4>
+                    <p class="text">Known for her sculptural takes on traditional tailoring, 
+                       Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                       <p class="cost">$52.00</p>
+          </div>
+            <form action="catalog.html" target="_blank"><button class="button-catalog">Browse All Product</button></form>
+         </section>  
+   </section> 
+</main>
+   <section class="feature">
+      <div class="wrap wrap_feature">
+         <div class="delivery">
+            <img class="delivery_img" src="img/delivery.svg" alt="delivery">
+                   <h4 class="heading_delivery">Free Delivery</h4>
+                   <p class="text_delivery">Worldwide delivery on all. 
+                      Authorit tively morph next-generation innov tion with extensive models.</p>   
+         </div>
+         <div class="discounts">
+            <img class="discounts_img" src="img/discounts.svg" alt="discount">
+                   <h4 class="heading_discounts">Sales & discounts</h4>
+                   <p class="text_discounts">Worldwide delivery on all. 
+                      Authorit tively morph next-generation innov tion with extensive models.</p>            
+        </div>
+        <div class="assurance">
+         <img class="assurance_img" src="img/assurance.svg" alt="assur">
+                <h4 class="heading_assur">Quality assurance</h4>
+                <p class="text_assur">Worldwide delivery on all. 
+                   Authorit tively morph next-generation innov tion with extensive models.</p>            
+        </div>
+      </div>
+   </section>
+  <section class="feedback">
+     <div class="wrap wrap_feedback">
+          <div class="feedback_info">
+                <img class="feedback_img" src="img/photo-feedback.png" alt="photo">
+                <h4 class="heading_feedback"><span class="heading_info">"Vestibulum quis porttitor dui! 
+                   Quisque viverra nunc mi,<span class="info_mini">a pulvinar purus condimentum"</span></span></h4>                 
+          </div>                           
+          <div class="feedback_subscrib">
+                <h4 class="heading_subscrib"><span class="subscrib_info">SUBSCRIBE<br><span class="subscrib_mini">
+                   FOR OUR NEWLETTER AND PROMOTIO</span></span></h4>
+                <form action="#" class="form">
+                     <input class="field-form" type="email" required placeholder="Enter Your Email">
+                     <input class="button-form" type="submit" value="Subscribe">
+               </form>        
+          </div>                 
+     </div>                 
+  </section>
+   <footer class="footer">
+      <div class="wrap wrap_footer">
+         <div class="copy">
+            <p>&copy; 2021 Brand All Rights Reserved.</p> 
+         </div>
+        <div class="social">                                                    
+           <a href="#" class="social-link"><img src="img/facebook-icon.svg" alt="facebook"></a>
+           <a href="#" class="social-link"><img src="img/instagram-icon.svg" alt="instagram"></a>
+           <a href="#" class="social-link"><img src="img/pinterest-icon.svg" alt="pinterest"></a>
+           <a href="#" class="social-link"><img src="img/twitter-icon.svg" alt="twitter"></a>
+        </div>
+      </div>                  
+   </footer>
 </body>
 </html>
